<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.MyProfileActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar_my_profile_activity_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_my_profile_activity"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="72dp"
        android:background="@drawable/ic_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_my_profile_activity_container">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/my_profile_screen_content_marginStartEnd"
            android:layout_marginTop="@dimen/my_profile_screen_content_marginTopBottom"
            android:layout_marginEnd="@dimen/my_profile_screen_content_marginStartEnd"
            android:layout_marginBottom="@dimen/my_profile_screen_content_marginTopBottom"
            android:elevation="@dimen/card_view_elevation"
            app:cardCornerRadius="@dimen/card_view_corner_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="@dimen/my_profile_screen_content_padding">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_profile_user_image"
                    android:layout_width="@dimen/my_profile_user_image_size"
                    android:layout_height="@dimen/my_profile_user_image_size"
                    android:contentDescription="@string/image_contentDescription"
                    android:src="@drawable/ic_user_place_holder" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/my_profile_name_til_marginTop">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:textSize="16dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/my_profile_name_til_marginTop">

                    <RadioGroup
                        android:id="@+id/RegisterGenderGroup"
                        android:layout_width="335dp"
                        android:layout_height="56dp"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/gender_man"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="男性" />

                        <RadioButton
                            android:id="@+id/gender_woman"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="女性" />

                        <RadioButton
                            android:id="@+id/gender_other"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="その他" />
                    </RadioGroup>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/my_profile_et_email_marginTop">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:textSize="16dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/fragment_vertical_margin"
                    android:baselineAligned="true"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="80dp"
                        android:layout_height="60dp"
                        app:layout_constraintEnd_toStartOf="@+id/textView"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/registerBirthDayLabel">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/registerBirthYearView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:ems="10"
                            android:hint="year"
                            android:inputType="date"
                            android:maxLength="4"
                            android:minHeight="50dp"
                            android:textSize="@dimen/register_text_size" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/yearText"
                        android:layout_width="20dp"
                        android:layout_height="30dp"
                        android:text="年"
                        android:textSize="18dp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="80dp"
                        android:layout_height="60dp"
                        app:layout_constraintEnd_toStartOf="@+id/textView"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/registerBirthDayLabel">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/registerBirthMonthView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:ems="10"
                            android:hint="month"
                            android:inputType="date"
                            android:maxLength="2"
                            android:minHeight="50dp"
                            android:textSize="@dimen/register_text_size" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/monthText"
                        android:layout_width="20dp"
                        android:layout_height="30dp"
                        android:text="月"
                        android:textSize="18dp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="80dp"
                        android:layout_height="60dp"
                        app:layout_constraintHorizontal_bias="0.5">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/registerBirthDayView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:ems="10"
                            android:hint="day"
                            android:inputType="date"
                            android:maxLength="2"
                            android:minHeight="50dp"
                            android:textSize="@dimen/register_text_size" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/dayText"
                        android:layout_width="20dp"
                        android:layout_height="30dp"
                        android:text="日"
                        android:textSize="18dp" />
                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginTop="@dimen/fragment_vertical_margin">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/registerAddressView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="郵便番号"
                        android:inputType="number"
                        android:maxLength="7"
                        android:minHeight="50dp"
                        android:textSize="@dimen/register_text_size" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/my_profile_et_mobile_marginTop">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_mobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/mobile"
                        android:inputType="phone"
                        android:textSize="16dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/my_profile_btn_update_marginTop"
                    android:background="@drawable/shape_button_rounded"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:text="@string/update"
                    android:textColor="@android:color/white"
                    android:textSize="16dp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>